--- a/login.html
+++ b/login.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="loginStyle.css">
 </head>
 <body>
+    <div class="banner">
+        <a href="https://www.linkedin.com/">
+            <img src="cougs.png" alt="Library Logo" style="width: 100px; height: auto; margin-right: 10px;">
+        </a>
+        <div class="search-bar">
+            <form id="bookSearchForm">
+            </form>
+            <input type="text" id="bookSearch" name="bookSearch" placeholder="Search for books...">
+        </div>
+    </div>
     <div class="login-container">
         <h2>Login</h2>
         <form action="login.php" method="POST">
